conversion to cap added as gradle build task

--- a/applet/build.gradle
+++ b/applet/build.gradle
@@ -53,6 +53,8 @@ final def JC305 = libsSdk + '/jc305u1_kit'
 // Which JavaCard SDK to use - select
 final def JC_SELECTED = JC304
 
+ant.importBuild 'build.xml'
+
 javacard {
 
     //noinspection GroovyAssignabilityCheck
