--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-.idea
 .gradle
 *.iml
 applet/out
@@ -7,9 +6,13 @@ simulator/build
 simulator/out
 tester/build
 tester/out
+out
+build
 
 *.class
 *.cap
 *~
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+/simulator/nbproject/private/
+/build/
